# badCalc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: calculator.h  mainwindow.h
src/: calculator.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
